[gd_scene load_steps=13 format=2]

[ext_resource path="res://nodes/gui/gui.gd" type="Script" id=1]
[ext_resource path="res://nodes/gui/hbox_device/hbox_device.tscn" type="PackedScene" id=2]

[sub_resource type="InputEventAction" id=1]
action = "do_reset"

[sub_resource type="ShortCut" id=2]
shortcut = SubResource( 1 )

[sub_resource type="InputEventAction" id=3]
action = "add_uplink"

[sub_resource type="ShortCut" id=4]
shortcut = SubResource( 3 )

[sub_resource type="InputEventAction" id=5]
action = "add_router"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="InputEventAction" id=7]
action = "add_switch"

[sub_resource type="ShortCut" id=8]
shortcut = SubResource( 7 )

[sub_resource type="InputEventAction" id=9]
action = "add_server"

[sub_resource type="ShortCut" id=10]
shortcut = SubResource( 9 )

[node name="gui" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="hbox" type="HBoxContainer" parent="."]
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0

[node name="margin_buttons" type="MarginContainer" parent="hbox"]
margin_right = 102.0
margin_bottom = 250.0

[node name="vbox_buttons" type="VBoxContainer" parent="hbox/margin_buttons"]
margin_right = 102.0
margin_bottom = 250.0

[node name="file" type="OptionButton" parent="hbox/margin_buttons/vbox_buttons"]
margin_right = 102.0
margin_bottom = 26.0
text = "file"

[node name="hbox" type="HBoxContainer" parent="hbox/margin_buttons/vbox_buttons"]
margin_top = 30.0
margin_right = 102.0
margin_bottom = 250.0

[node name="vbox" type="VBoxContainer" parent="hbox/margin_buttons/vbox_buttons/hbox"]
margin_right = 102.0
margin_bottom = 220.0

[node name="save" type="Button" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_right = 102.0
margin_bottom = 26.0
text = "save"

[node name="load" type="Button" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_top = 30.0
margin_right = 102.0
margin_bottom = 56.0
text = "load"

[node name="reset" type="Button" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_top = 60.0
margin_right = 102.0
margin_bottom = 86.0
shortcut = SubResource( 2 )
text = "reset[R]"

[node name="spacer1" type="Control" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_top = 90.0
margin_right = 102.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 10 )

[node name="uplink" type="Button" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_top = 104.0
margin_right = 102.0
margin_bottom = 130.0
shortcut = SubResource( 4 )
text = "uplink[1]"

[node name="router" type="Button" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_top = 134.0
margin_right = 102.0
margin_bottom = 160.0
shortcut = SubResource( 6 )
text = "router[2]"

[node name="switch" type="Button" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_top = 164.0
margin_right = 102.0
margin_bottom = 190.0
shortcut = SubResource( 8 )
text = "switch[3]"

[node name="server" type="Button" parent="hbox/margin_buttons/vbox_buttons/hbox/vbox"]
margin_top = 194.0
margin_right = 102.0
margin_bottom = 220.0
shortcut = SubResource( 10 )
text = "server[4]"

[node name="spacer2" type="Control" parent="hbox"]
margin_left = 106.0
margin_right = 111.0
margin_bottom = 250.0
rect_min_size = Vector2( 5, 10 )

[node name="margin_labels" type="MarginContainer" parent="hbox"]
margin_left = 115.0
margin_right = 249.0
margin_bottom = 250.0

[node name="hbox" type="HBoxContainer" parent="hbox/margin_labels"]
margin_right = 134.0
margin_bottom = 250.0

[node name="vbox_labels" type="VBoxContainer" parent="hbox/margin_labels/hbox"]
margin_right = 50.0
margin_bottom = 250.0

[node name="site" type="Label" parent="hbox/margin_labels/hbox/vbox_labels"]
margin_right = 50.0
margin_bottom = 20.0
text = "SITE:"

[node name="vbox_values" type="VBoxContainer" parent="hbox/margin_labels/hbox"]
margin_left = 54.0
margin_right = 134.0
margin_bottom = 250.0

[node name="site" type="Label" parent="hbox/margin_labels/hbox/vbox_values"]
margin_right = 80.0
margin_bottom = 20.0
text = "l33t.xyz"

[node name="hbox_device" parent="." instance=ExtResource( 2 )]
[connection signal="pressed" from="hbox/margin_buttons/vbox_buttons/hbox/vbox/save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="hbox/margin_buttons/vbox_buttons/hbox/vbox/load" to="." method="_on_load_pressed"]
[connection signal="pressed" from="hbox/margin_buttons/vbox_buttons/hbox/vbox/reset" to="." method="_on_reset_pressed"]
[connection signal="pressed" from="hbox/margin_buttons/vbox_buttons/hbox/vbox/uplink" to="." method="_on_uplink_pressed"]
[connection signal="pressed" from="hbox/margin_buttons/vbox_buttons/hbox/vbox/router" to="." method="_on_router_pressed"]
[connection signal="pressed" from="hbox/margin_buttons/vbox_buttons/hbox/vbox/switch" to="." method="_on_switch_pressed"]
[connection signal="pressed" from="hbox/margin_buttons/vbox_buttons/hbox/vbox/server" to="." method="_on_server_pressed"]
